--- a/style.css
+++ b/style.css
@@ -106,3 +106,22 @@ button:hover {
     gap: 12px;
   }
 }
+
+
+
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #eae3dd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.spinner-border.text-secondary {
+  color: #aaa; /* رمادي فاتح واضح */
+}
